--- a/_config.yml
+++ b/_config.yml
@@ -108,7 +108,7 @@ author:
   avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
   bio              : "저는 데이터를 사랑하는 사람입니다."
   location         : "Seoul, Korea"
-  email            : "wo123kr@naver.com"
+  #email            : "wo123kr@naver.com"
   links:
     - label: "Email"
       icon: "fas fa-fw fa-envelope-square"
